--- a/app/src/main/res/layout/fragment_drinks.xml
+++ b/app/src/main/res/layout/fragment_drinks.xml
@@ -4,10 +4,9 @@
     android:layout_height="match_parent"
     tools:context="com.example.shahp.finalproject.Fragment.DrinksFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/fragmentDrinksRecycleView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </FrameLayout>
