--- a/app/src/main/res/layout/drink_card.xml
+++ b/app/src/main/res/layout/drink_card.xml
@@ -22,13 +22,20 @@
             <ImageView
                 android:id="@+id/ivDrinkThumb"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:maxHeight="150dp"
+                android:maxWidth="150dp"
+                android:layout_below="@+id/tvDrink"
+                android:layout_centerHorizontal="true" />
 
             <TextView
                 android:id="@+id/tvDrink"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:padding="10dp"
+                android:text="TextView"
+                android:textColor="#FFFFFF"
+                android:textAlignment="center"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
