--- a/app/src/main/res/layout/drink_card.xml
+++ b/app/src/main/res/layout/drink_card.xml
@@ -4,39 +4,36 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/cardview_light_background"
-    android:padding="20dp">
+    android:padding="10dp"
+    android:minHeight="100dp"
+    android:maxHeight="150dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/colorPrimary"
         app:cardCornerRadius="14dp"
-        app:cardElevation="5dp"
-        app:cardUseCompatPadding="true"
-        app:contentPadding="10dp">
+        app:cardElevation="0dp"
+        app:contentPadding="5dp">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/ivDrinkThumb"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:maxHeight="150dp"
-                android:maxWidth="150dp"
                 android:layout_below="@+id/tvDrink"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerHorizontal="true"
+                android:maxHeight="170dp"
+                android:maxWidth="150dp" />
 
             <TextView
                 android:id="@+id/tvDrink"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
+                android:padding="5dp"
                 android:text="TextView"
-                android:textColor="#FFFFFF"
-                android:textAlignment="center"/>
-        </RelativeLayout>
+                android:textAlignment="center"
+                android:textColor="#FFFFFF" />
     </android.support.v7.widget.CardView>
 
 </RelativeLayout>
