--- a/app/src/main/res/layout/drink_card.xml
+++ b/app/src/main/res/layout/drink_card.xml
@@ -12,7 +12,7 @@
         android:id="@+id/drinkCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardBackgroundColor="@color/cardview_dark_background"
         app:cardCornerRadius="14dp"
         app:cardElevation="0dp">
 
