--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -23,7 +23,9 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="invisible"/>
+        android:progressDrawable="@color/colorPrimary"
+        android:progressTint="@color/colorAccent"
+        android:visibility="invisible" />
 
 
 </RelativeLayout>
