--- a/app/src/main/res/layout/fragment_display_drink.xml
+++ b/app/src/main/res/layout/fragment_display_drink.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    tools:context="com.example.shahp.finalproject.Fragment.DisplayDrinkFragment">
+    tools:context="com.example.shahp.finalproject.Fragment.Drink.DisplayDrinkFragment">
             <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
