--- a/app/src/main/res/layout/fragment_drinks.xml
+++ b/app/src/main/res/layout/fragment_drinks.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.shahp.finalproject.Fragment.DrinksFragment">
+    tools:context="com.example.shahp.finalproject.Fragment.Drinks.DrinksFragment">
 
 
     <android.support.v7.widget.RecyclerView
