--- a/app/src/main/res/layout/fragment_display_drink.xml
+++ b/app/src/main/res/layout/fragment_display_drink.xml
@@ -12,13 +12,19 @@
             android:gravity="center"
             android:layout_centerInParent="true"
             android:orientation="vertical"
-            android:textAlignment="center">
+            android:textAlignment="center"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:textSize="@dimen/text">
 
             <TextView
                 android:id="@+id/tvDrinkName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center" />
+                android:gravity="center"
+                android:textSize="24dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"/>
 
             <ImageView
                 android:id="@+id/imDrink"
@@ -31,7 +37,9 @@
                 android:maxHeight="250dp"
                 android:maxWidth="250dp"
                 android:minHeight="150dp"
-                android:minWidth="150dp" />
+                android:minWidth="150dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"/>
 
             <TextView
                 android:id="@+id/tvInstructions"
@@ -40,7 +48,10 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/imDrink"
-                android:gravity="center" />
+                android:gravity="center"
+                android:textSize="@dimen/text"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"/>
 
             <TableLayout
                 android:id="@+id/displayLinear"
@@ -52,28 +63,40 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_centerInParent="true"
                 android:layout_marginHorizontal="10dp"
-                android:gravity="center" />
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:gravity="center"
+                android:textSize="@dimen/text"/>
 
             <TextView
                 android:id="@+id/tvGlass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/displayLinear"
-                android:gravity="center" />
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:textSize="@dimen/text"/>
 
             <TextView
                 android:id="@+id/tvCatergories"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvGlass"
-                android:gravity="center" />
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:textSize="@dimen/text"/>
 
             <TextView
                 android:id="@+id/tvAlc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvCatergories"
-                android:gravity="center" />
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:textSize="@dimen/text"/>
 
         </RelativeLayout>
 </ScrollView>
