--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">60dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="text">14dp</dimen>
 </resources>
