--- a/app/src/main/res/layout/fragment_display_drink.xml
+++ b/app/src/main/res/layout/fragment_display_drink.xml
@@ -49,9 +49,11 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/imDrink"
                 android:gravity="center"
-                android:textSize="@dimen/text"
+                android:textSize="@dimen/text2"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"/>
+                android:layout_marginBottom="5dp"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"/>
 
             <TableLayout
                 android:id="@+id/displayLinear"
