--- a/app/src/main/res/layout/fragment_display_drink.xml
+++ b/app/src/main/res/layout/fragment_display_drink.xml
@@ -59,16 +59,14 @@
                 android:id="@+id/displayLinear"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/tvInstructions"
                 android:layout_gravity="center_horizontal"
-                android:layout_centerInParent="true"
                 android:layout_marginHorizontal="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
+                android:minHeight="50dp"
                 android:gravity="center"
-                android:textSize="@dimen/text"/>
+                android:textSize="@dimen/text"
+                android:layout_below="@+id/tvInstructions"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
             <TextView
                 android:id="@+id/tvGlass"
@@ -100,5 +98,15 @@
                 android:layout_marginBottom="5dp"
                 android:textSize="@dimen/text"/>
 
-        </RelativeLayout>
+                <Button
+                    android:id="@+id/button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvAlc"
+                    android:text="Save"
+                    android:gravity="center"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true" />
+
+            </RelativeLayout>
 </ScrollView>
