--- a/app/src/main/res/layout/drink_card.xml
+++ b/app/src/main/res/layout/drink_card.xml
@@ -12,9 +12,22 @@
         android:id="@+id/drinkCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/cardview_dark_background"
+        app:cardBackgroundColor="@color/colorAccent"
         app:cardCornerRadius="14dp"
         app:cardElevation="0dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tvDrink"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:height="30dp"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF" />
 
 
             <ImageView
@@ -24,15 +37,14 @@
                 android:layout_below="@+id/tvDrink"
                 android:layout_centerHorizontal="true"
                 android:maxHeight="170dp"
-                android:maxWidth="150dp" />
+                android:maxWidth="170dp"
+                android:minHeight="100dp"
+                android:minWidth="100dp"
+                android:layout_marginBottom="30dp"/>
 
-            <TextView
-                android:id="@+id/tvDrink"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:textAlignment="center"
-                android:textColor="#FFFFFF" />
+
+
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
 
 </RelativeLayout>
