--- a/app/src/main/res/layout/fragment_display_drink.xml
+++ b/app/src/main/res/layout/fragment_display_drink.xml
@@ -11,7 +11,6 @@
             android:layout_centerHorizontal="true"
             android:gravity="center"
             android:layout_centerInParent="true"
-            android:orientation="vertical"
             android:textAlignment="center"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
@@ -117,6 +116,30 @@
                     android:gravity="center"
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true" />
+
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/floatingSave"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_below="@+id/tvAlc"
+                    android:layout_marginEnd="39dp"
+                    android:layout_marginRight="39dp"
+                    android:clickable="true"
+                    app:fabSize="mini"
+                    app:srcCompat="@mipmap/ic_save" />
+
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/floatingDelete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/floatingSave"
+                    android:layout_alignEnd="@+id/floatingSave"
+                    android:layout_alignRight="@+id/floatingSave"
+                    android:clickable="true"
+                    app:fabSize="mini"
+                    app:srcCompat="@mipmap/ic_delete" />
 
             </RelativeLayout>
 </ScrollView>
