--- a/app/src/main/res/layout/fragment_display_drink.xml
+++ b/app/src/main/res/layout/fragment_display_drink.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -37,8 +37,6 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/tvDrinkName"
                 android:gravity="center"
-                android:maxHeight="250dp"
-                android:maxWidth="250dp"
                 android:minHeight="150dp"
                 android:minWidth="150dp"
                 android:layout_marginTop="5dp"
@@ -109,25 +107,17 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingSave"
+        app:srcCompat="@drawable/ic_save_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="13dp"
-        android:layout_marginRight="13dp"
-        android:clickable="true"
-        app:fabSize="mini"
-        app:srcCompat="@drawable/ic_save_2"
-        android:layout_alignTop="@+id/floatingDelete"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingDelete"
+        app:srcCompat="@drawable/ic_delete_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true"
-        app:fabSize="mini"
-        app:srcCompat="@drawable/ic_delete_2"
-        android:layout_alignBottom="@+id/scrollView2"
-        android:layout_alignLeft="@+id/floatingSave"
-        android:layout_alignStart="@+id/floatingSave" />
-</RelativeLayout>
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin" />
+</android.support.design.widget.CoordinatorLayout>
