--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,14 +18,21 @@
 
     </FrameLayout>
 
+
     <ProgressBar
         android:id="@+id/progressBar2"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:progressDrawable="@color/colorPrimary"
-        android:progressTint="@color/colorAccent"
-        android:visibility="invisible" />
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <!--<ProgressBar-->
+        <!--android:id="@+id/progressBar2"-->
+        <!--style="?android:attr/progressBarStyle"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:progressDrawable="@color/colorPrimary"-->
+        <!--android:progressTint="@color/colorAccent"-->
+        <!--android:visibility="invisible" />-->
 
 
 </RelativeLayout>
