--- a/app/src/main/res/layout/fragment_display_drink.xml
+++ b/app/src/main/res/layout/fragment_display_drink.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:background="@color/colorAccent"
     tools:context="com.example.shahp.finalproject.Fragment.Drink.DisplayDrinkFragment">
             <ScrollView
             android:layout_width="match_parent"
@@ -24,6 +25,7 @@
                 android:id="@+id/tvDrinkName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimaryDark"
                 android:gravity="center"
                 android:textSize="24dp"
                 android:layout_marginTop="5dp"
@@ -49,6 +51,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/imDrink"
+                android:textColor="@color/colorPrimaryDark"
                 android:gravity="center"
                 android:textSize="@dimen/text2"
                 android:layout_marginTop="5dp"
@@ -62,6 +65,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginHorizontal="10dp"
+                android:textColor="@color/colorPrimaryDark"
                 android:minHeight="50dp"
                 android:gravity="center"
                 android:textSize="@dimen/text"
@@ -74,6 +78,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/displayLinear"
+                android:textColor="@color/colorPrimaryDark"
                 android:gravity="center"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
@@ -84,6 +89,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvGlass"
+                android:textColor="@color/colorPrimaryDark"
                 android:gravity="center"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
@@ -94,6 +100,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvCatergories"
+                android:textColor="@color/colorPrimaryDark"
                 android:gravity="center"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
@@ -111,6 +118,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:background="@color/colorPrimaryDark"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:layout_margin="@dimen/fab_margin" />
 
     <android.support.design.widget.FloatingActionButton
@@ -119,5 +128,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:background="@color/colorPrimaryDark"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:layout_margin="@dimen/fab_margin" />
 </android.support.design.widget.CoordinatorLayout>
