layout with correct colors

--- a/app/src/main/res/layout/drink_card.xml
+++ b/app/src/main/res/layout/drink_card.xml
@@ -8,7 +8,8 @@
     android:minHeight="100dp"
     android:maxHeight="170dp"
     android:minWidth="100dp"
-    android:maxWidth="170dp">
+    android:maxWidth="170dp"
+    android:backgroundTint="@color/colorPrimaryDark">
 
     <android.support.v7.widget.CardView
         android:id="@+id/drinkCard"
