--- a/app/src/main/res/layout/fragment_display_drink.xml
+++ b/app/src/main/res/layout/fragment_display_drink.xml
@@ -3,33 +3,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:background="@color/colorAccent"
+    android:gravity="center"
+    android:layout_weight="1"
+    android:minHeight="800dp"
     tools:context="com.example.shahp.finalproject.Fragment.Drink.DisplayDrinkFragment">
-            <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:gravity="center"
-            android:layout_centerInParent="true"
-            android:textAlignment="center"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:textSize="@dimen/text"
-                android:id="@+id/scrollView2">
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent">
+
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center"
+        android:textAlignment="center"
+        android:textSize="@dimen/text">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/tvDrinkName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorPrimaryDark"
-                android:gravity="center"
-                android:textSize="24dp"
+                android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"/>
+                android:gravity="center"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="24dp" />
 
             <ImageView
                 android:id="@+id/imDrink"
@@ -38,11 +42,11 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/tvDrinkName"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
                 android:gravity="center"
                 android:minHeight="150dp"
-                android:minWidth="150dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"/>
+                android:minWidth="150dp" />
 
             <TextView
                 android:id="@+id/tvInstructions"
@@ -51,84 +55,83 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/imDrink"
-                android:textColor="@color/colorPrimaryDark"
-                android:gravity="center"
-                android:textSize="@dimen/text2"
-                android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:gravity="center"
                 android:paddingLeft="15dp"
-                android:paddingRight="15dp"/>
+                android:paddingRight="15dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="@dimen/text2" />
 
             <TableLayout
                 android:id="@+id/displayLinear"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/tvInstructions"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginHorizontal="10dp"
-                android:textColor="@color/colorPrimaryDark"
-                android:minHeight="50dp"
                 android:gravity="center"
-                android:textSize="@dimen/text"
-                android:layout_below="@+id/tvInstructions"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:minHeight="50dp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="@dimen/text" />
 
             <TextView
                 android:id="@+id/tvGlass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/displayLinear"
-                android:textColor="@color/colorPrimaryDark"
-                android:gravity="center"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
-                android:textSize="@dimen/text"/>
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="@dimen/text" />
 
             <TextView
                 android:id="@+id/tvCatergories"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvGlass"
-                android:textColor="@color/colorPrimaryDark"
-                android:gravity="center"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
-                android:textSize="@dimen/text"/>
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="@dimen/text" />
 
             <TextView
                 android:id="@+id/tvAlc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvCatergories"
-                android:textColor="@color/colorPrimaryDark"
-                android:gravity="center"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
-                android:textSize="@dimen/text"/>
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="@dimen/text" />
 
 
+        </RelativeLayout>
 
-                </RelativeLayout>
-
-            </ScrollView>
+    </ScrollView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingSave"
-        app:srcCompat="@drawable/ic_save_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
         android:background="@color/colorPrimaryDark"
         android:backgroundTint="@color/colorPrimaryDark"
-        android:layout_margin="@dimen/fab_margin" />
+        app:srcCompat="@drawable/ic_save_2" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingDelete"
-        app:srcCompat="@drawable/ic_delete_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
         android:background="@color/colorPrimaryDark"
         android:backgroundTint="@color/colorPrimaryDark"
-        android:layout_margin="@dimen/fab_margin" />
+        app:srcCompat="@drawable/ic_delete_2" />
 </android.support.design.widget.CoordinatorLayout>
