--- a/app/src/main/res/layout/fragment_drinks.xml
+++ b/app/src/main/res/layout/fragment_drinks.xml
@@ -2,11 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.shahp.finalproject.Fragment.Drinks.DrinksFragment">
+    tools:context="com.example.shahp.finalproject.Fragment.Drinks.DrinksFragment"
+    android:backgroundTint="@color/colorPrimaryDark">
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fragmentDrinksRecycleView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:backgroundTint="@color/colorPrimaryDark"/>
 </FrameLayout>
