--- a/app/src/main/res/layout/drink_card.xml
+++ b/app/src/main/res/layout/drink_card.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/cardview_light_background"
+    android:background="@color/colorPrimaryDark"
     android:padding="10dp"
-    android:minHeight="100dp"
-    android:maxHeight="170dp"
+    android:minHeight="190dp"
+    android:maxHeight="190dp"
     android:minWidth="100dp"
     android:maxWidth="170dp"
     android:backgroundTint="@color/colorPrimaryDark">
